# structurePE

./: .gitignore  LICENSE  README.md  pyproject.toml
ckpts/: README.md
data/pop909/: preprocessing.py
data/pop909/data/: chord_db.npz  split.npz  startpos.csv
data/pop909/data/001/len_0.5/: 001_0_sample.npz  001_0_struct_num.npz  001_1_sample.npz  001_1_struct_num.npz  001_2_sample.npz  001_2_struct_num.npz  001_3_sample.npz  001_3_struct_num.npz  001_4_sample.npz  001_4_struct_num.npz  001_5_sample.npz  001_5_struct_num.npz  001_6_sample.npz  001_6_struct_num.npz  001_7_sample.npz  001_7_struct_num.npz  001_8_sample.npz  001_8_struct_num.npz  001_9_sample.npz  001_9_struct_num.npz
data/pop909/data/002/len_0.5/: 002_0_sample.npz  002_0_struct_num.npz  002_1_sample.npz  002_1_struct_num.npz  002_2_sample.npz  002_2_struct_num.npz  002_3_sample.npz  002_3_struct_num.npz  002_4_sample.npz  002_4_struct_num.npz  002_5_sample.npz  002_5_struct_num.npz  002_6_sample.npz  002_6_struct_num.npz  002_7_sample.npz  002_7_struct_num.npz
data/pop909/data/003/len_0.5/: 003_0_sample.npz  003_0_struct_num.npz  003_1_sample.npz  003_1_struct_num.npz  003_2_sample.npz  003_2_struct_num.npz  003_3_sample.npz  003_3_struct_num.npz  003_4_sample.npz  003_4_struct_num.npz  (+10 more)
exp/pop909/: binarization.py  inference.py  metrics.py
src/structure_pe/: datasets.py  lr_scheduler.py  neptune_logger.py  nn.py  structureformer.py  train_pop909.py
src/torch_replace/: version.txt
src/torch_replace/nn/: functional.py
src/torch_replace/nn/modules/: activation.py  transformer.py
(+19170 files in other folders)
