[tool.poetry]
name = "structurePE"
version = "0.1.0"
description = ""
authors = ["Manvi Agarwal <manvi.agarwal@telecom-paris.fr>"]

packages = [
    { include = "structure_pe", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8.0"
bidict = "^0.21.2"
numpy = "~1.20.1"
flatdict = "^4.0.1"
typing-extensions = "^4.4.0"
pandas = "^1.2.3"
h5py = "^3.8.0"
jupyterlab = "^3.1.0"
muspy = "^0.3.0"
torch = "^1.13.1"
pytorch-lightning = "~1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
